...
                                                <color key="tintColor" systemColor="labelColor"/>
                                                <state key="normal" backgroundImage="location.circle.fill" catalog="system"/>
                                                <connections>
                                                    <action selector="locationPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z4f-61-zcm"/>
                                                </connections>
                                            </button>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" textAlignment="right" clearsOnBeginEditing="YES" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="2eh-wL-W34">
                                                <rect key="frame" x="50" y="0.0" width="274" height="40"/>
                                                <color key="backgroundColor" systemColor="systemFillColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="searchField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="go"/>
                                            </textField>
...
                                                <accessibility key="accessibilityConfiguration" identifier="search"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="fiO-2W-UTJ"/>
                                                    <constraint firstAttribute="width" constant="40" id="fn6-Kr-iSP"/>
                                                </constraints>
                                                <color key="tintColor" systemColor="labelColor"/>
                                                <state key="normal" backgroundImage="magnifyingglass" catalog="system"/>
                                                <connections>
                                                    <action selector="searchPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PbO-be-puh"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
